--- a/FrtvGUI/Views/MainWindow.xaml
+++ b/FrtvGUI/Views/MainWindow.xaml
@@ -54,8 +54,8 @@
                 <!-- 백업 리스트 요소 -->
                 <TabItem Header="백업 저장소">
                     <Grid Background="White">
-                        <DataGrid x:Name="fileDataGrid" AutoGenerateColumns="False" IsReadOnly="True" VirtualizingPanel.VirtualizationMode="Recycling" VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.IsVirtualizingWhenGrouping="True"
-Background="White" GridLinesVisibility="All" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Center" VerticalAlignment="Top" Height="356" Width="700" BorderThickness="1,1,1,1" Margin="0,10,0,0">
+                        <DataGrid x:Name="fileDataGrid" AutoGenerateColumns="False" IsReadOnly="True" VirtualizingPanel.VirtualizationMode="Standard" VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.IsVirtualizingWhenGrouping="True" 
+Background="White" GridLinesVisibility="All" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Center" VerticalAlignment="Top" Height="356" Width="700" BorderThickness="1,1,1,1" Margin="0,10,0,0" HeadersVisibility="Column" >
                             <DataGrid.Columns>
                                 <DataGridTextColumn Binding="{Binding Crc32, Converter={StaticResource CRC32Converter}}" CanUserReorder="False" Header="CRC32"/>
                                 <DataGridTextColumn Binding="{Binding OriginalPath}" CanUserReorder="False" Header="원래 경로"/>
